Updates the styling to prevent an image from overflowing the page

--- a/front-end/src/styles.scss
+++ b/front-end/src/styles.scss
@@ -76,8 +76,12 @@ label.disabled {
   padding-bottom: 10px;
 }
 
-.button-max-width {
+.button-full-width {
   width: 100%;
+}
+
+.image-max-width {
+  max-width:100%;
 }
 
 .no-vert-margins {
